--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.17.2",
     "task-app-front-end": "file:",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
